[project]
name = "se-transform-runner"
version = "0.1.0"
description = "CLI runner for executing SE Transform pipelines and registering them."
requires-python = ">=3.10"
dependencies = [
  "se-transform-sdk>=0.1.0",
  "requests>=2.31"
]

[project.scripts]
se-transform = "se_transform_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["se_transform_runner"]