[project]
name = "se-transform-sdk"
version = "0.1.0"
description = "SDK for defining and running SE Transform pipelines with lineage."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pydantic>=2",
  "pandas>=2.0",
  # boto3 only when using S3 backend; keep optional to avoid forcing it locally
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["se_transform_sdk"]